# sda_projects

./: .gitignore  Makefile  README.md  requirements-legacy.txt
causal-marketing-pymc/: .gitignore  Makefile  README.md  pyproject.toml  requirements-legacy.txt
causal-marketing-pymc/apps/: build_geo_slides.py  build_iv_html.py  build_iv_lecture_data.py  build_iv_slides.py  build_iv_slides_sh.py  build_labs_slides.py  build_unified_slides.py  confounding_sensitivity.py  experiment_design.py  geo_4M_rebuild_SPEC.md  geo_claims.yaml  geo_lecture_data.json  geo_lecture_data_b.json  geo_lecture_extras.json  geo_lift_lecture.html  geo_lift_lecture_emphasis.md  geo_lift_lecture_speech.md  geo_lift_sh.html  geo_lift_slides.html  geo_lift_slides_REVISION_PLAN.md  geo_slides_new_sections.html  geo_slides_sh_src.html  geo_slides_src.html  instrumental_variables.py  iv_lecture.html  iv_lecture.py  iv_lecture_data.json  iv_slides.html  iv_slides_REVISION_PLAN.md  iv_slides_sh.html  iv_slides_sh_src.html  iv_slides_src.html  labs_claims.yaml  labs_deck_data.json  labs_slides.html  labs_slides_REVISION_PLAN.md  labs_slides_src.html  synthetic_control_placebo.py  unified_slides.html  unified_slides_src.html  (+4 more)
causal-marketing-pymc/book/: BOOK_SPEC.md  COURSE_MAP.md  LIST_TO_FIX.md  NOTATION.md  OPEN_ITEMS.md  REVISION_PLAN.md  book.tex  build.py  chapter.tex  preamble.tex  refs.bib
causal-marketing-pymc/docs/: ASSESSMENT.md  PLAN.md  RECONCILIATION.md  REGRADE.md  geolift_in_depth.py  uplift_in_depth.py
causal-marketing-pymc/notebooks/: 00_foundations.ipynb  01_uplift_targeting.ipynb  02_segment_effects.ipynb  03_price_elasticity.ipynb  04_funnel_mediation.ipynb  05_what_to_control_for.ipynb  06_incrementality_mmm.ipynb  07_geo_lift_synthetic_control.ipynb  07b_geo_lift_real_data.ipynb  08_rollout_did.ipynb  09_threshold_perk_rdd.ipynb  10_redesign_its.ipynb  11_endogenous_exposure_iv.ipynb  11b_endogenous_exposure_real_data.ipynb
tests/: test_notebooks.py  (+1 more)
(+76 files in other folders)
